--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,7 +91,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_ocr"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/background_item"
         android:elevation="10dp"
@@ -101,24 +101,26 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_ocr"
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="120dp"
+            android:layout_marginStart="20dp"
             android:src="@drawable/ic_ocr"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_ocr"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_ocr"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:fontFamily="@font/ubuntu_light"
             android:text="@string/text_recognition"
             android:textColor="@color/colorWhite"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_ocr"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -126,8 +128,9 @@
     <Button
         android:id="@+id/btnCamera"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_camera"
@@ -138,14 +141,15 @@
         android:text="@string/camera"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnGalary"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@id/gl_med"
+        app:layout_constraintStart_toStartOf="@id/gl_start" />
 
     <Button
         android:id="@+id/btnGalary"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="180dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_original"
@@ -156,8 +160,8 @@
         android:text="@string/files"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnCamera" />
+        app:layout_constraintEnd_toEndOf="@id/gl_end"
+        app:layout_constraintStart_toStartOf="@id/gl_med" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_menu"
@@ -221,5 +225,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".95" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_med"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".5" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
