--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="colorGray">#4D4D4D</color>
     <color name="colorCardBack">#262035</color>
     <color name="colorRed">#FF5252</color>
-    <color name="colorHighlight">#E040FB</color>
+    <color name="colorHighlight">#69F0AE</color>
 </resources>
