--- a/scanlibrary/src/main/res/layout/result_layout.xml
+++ b/scanlibrary/src/main/res/layout/result_layout.xml
@@ -179,6 +179,7 @@
             android:id="@+id/seek_brightness"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:progressBackgroundTint="@color/blue"
             android:progressTint="@color/colorWhite"
             android:thumbTint="@color/colorPurple" />
 
@@ -205,6 +206,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="5"
+            android:progressBackgroundTint="@color/blue"
             android:progressTint="@color/colorWhite"
             android:thumbTint="@color/colorPurple" />
 
