commit for final app

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,7 @@
             android:id="@+id/iv_browse_images"
             android:layout_width="0dp"
             android:layout_height="120dp"
+            android:elevation="5dp"
             android:src="@drawable/ic_folder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +70,7 @@
             android:id="@+id/iv_browse_pdf"
             android:layout_width="0dp"
             android:layout_height="120dp"
+            android:elevation="5dp"
             android:src="@drawable/ic_folder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +136,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_camera"
+        android:elevation="5dp"
         android:fontFamily="@font/ubuntu"
         android:gravity="center"
         android:paddingStart="40dp"
@@ -153,6 +156,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_original"
+        android:elevation="5dp"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
         android:paddingStart="50dp"
