--- a/app/src/main/res/layout/fragment_pdf_list.xml
+++ b/app/src/main/res/layout/fragment_pdf_list.xml
@@ -31,11 +31,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_pdf_list"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_list_name"
