--- a/app/src/main/res/layout/item_doc.xml
+++ b/app/src/main/res/layout/item_doc.xml
@@ -28,9 +28,9 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_doc_type"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="2dp"
             android:src="@drawable/ic_original"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,12 +40,13 @@
             android:id="@+id/tv_doc_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="2dp"
             android:ellipsize="end"
             android:fontFamily="@font/ubuntu_light"
             android:maxLines="1"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="@+id/iv_doc_type"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_doc_type"
             app:layout_constraintTop_toTopOf="@+id/iv_doc_type"
             tools:text="This is doc" />
