--- a/scanlibrary/src/main/res/layout/dialog_save.xml
+++ b/scanlibrary/src/main/res/layout/dialog_save.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="20dp"
         android:autofillHints="Enter your file name"
         android:background="@drawable/shape_edit_text_back"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_@."
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_@.ABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:hint="@string/file_name"
         android:inputType="text"
         android:maxLength="30"
