commit for gamma effect added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,7 +149,7 @@
         android:id="@+id/btnCamera"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
@@ -157,6 +157,7 @@
         android:elevation="5dp"
         android:fontFamily="@font/ubuntu"
         android:gravity="center"
+        android:maxLines="1"
         android:paddingStart="40dp"
         android:paddingEnd="40dp"
         android:text="@string/camera"
@@ -169,13 +170,14 @@
         android:id="@+id/btnGalary"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_original"
         android:elevation="5dp"
         android:fontFamily="@font/ubuntu"
+        android:maxLines="1"
         android:padding="10dp"
         android:paddingStart="50dp"
         android:paddingEnd="50dp"
