commit for doc list UI change

--- a/app/src/main/res/layout/fragment_doc_detail.xml
+++ b/app/src/main/res/layout/fragment_doc_detail.xml
@@ -72,6 +72,7 @@
         android:text="@string/delete"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/btn_share"
         app:layout_constraintEnd_toStartOf="@+id/btn_share"
         app:layout_constraintTop_toTopOf="@+id/btn_share" />
