--- a/app/src/main/res/layout/fragment_doc_list.xml
+++ b/app/src/main/res/layout/fragment_doc_list.xml
@@ -35,12 +35,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/rl_add_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_list_name"
-        app:spanCount="3"
         tools:listitem="@layout/item_doc" />
 
     <RelativeLayout
