--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:lineSpacingMultiplier="1.2"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/ubuntu_light"
         android:maxLines="3"
