--- a/scanlibrary/src/main/res/layout/result_layout.xml
+++ b/scanlibrary/src/main/res/layout/result_layout.xml
@@ -50,7 +50,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:singleLine="true"
-            android:text="Gamma"
+            android:text="Perfect"
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
 
@@ -180,6 +180,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:elevation="5dp"
+        android:visibility="gone"
         android:text="@string/for_better_results_use_brightness_or_contrast"
         android:textColor="@color/blue" />
 
