--- a/scanlibrary/src/main/res/layout/dialog_save.xml
+++ b/scanlibrary/src/main/res/layout/dialog_save.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="20dp"
         android:autofillHints="Enter your file name"
         android:background="@drawable/shape_edit_text_back"
-        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_@.ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm_@.ABCDEFGHIJKLMNOPQRSTUVWXYZ "
         android:hint="@string/file_name"
         android:inputType="text"
         android:maxLength="30"
@@ -26,14 +26,14 @@
 
     <Button
         android:id="@+id/btn_save_img"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/et_file_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_original"
-        android:padding="10dp"
+        android:drawablePadding="10dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:text="@string/save_as_image"
@@ -42,14 +42,14 @@
 
     <Button
         android:id="@+id/btn_save_pdf"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_save_img"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="@drawable/circle_background"
         android:drawableStart="@drawable/ic_pdf"
-        android:padding="10dp"
+        android:drawablePadding="10dp"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         android:text="@string/save_as_pdf"
