--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.splash.SplashActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/appCompatImageView"
+        android:id="@+id/iv_splash_logo"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:src="@drawable/cam_master_logo"
@@ -24,9 +24,9 @@
         android:text="@string/cam_master"
         android:textColor="#ffffff"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
-        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
+        app:layout_constraintEnd_toEndOf="@+id/iv_splash_logo"
+        app:layout_constraintStart_toStartOf="@+id/iv_splash_logo"
+        app:layout_constraintTop_toBottomOf="@+id/iv_splash_logo" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_med"
